# projectGen

./: .gitignore  Cargo.toml  README.md
demo/: data.yaml
examples/: Cargo.toml  java_write.rs  pom_write.rs
examples/java/java_write/: Cargo.toml
examples/java/java_write/src/: main.rs
examples/java/pom_write/: Cargo.toml
examples/java/pom_write/src/: main.rs
project_gen_core/: Cargo.toml
project_gen_core/src/: lib.rs
project_gen_java/: Cargo.toml
project_gen_java/src/: java_pom_writer.rs  java_source_code.rs  java_source_writer.rs  lib.rs
project_gen_parser/: Cargo.toml
project_gen_parser/src/: data.rs
project_gen_ts/: Cargo.toml
src/: config.rs  error.rs  lib.rs  main.rs  parser.rs
src/java/: java_pom.rs  java_pom_writer.rs  java_source_code.rs  java_source_writer.rs  mod.rs  pom.rs
src/parse/: common.rs  data.rs  mod.rs
