[package]
name = "project_gen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["zhoutaosheng 1595875780@qq.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
failure = "0.1.8"
quick-xml = "0.31.0"
lazy_static = "1.4.0"
