[package]
name = "project_gen_parser"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
project_gen_core.workspace = true
serde.workspace = true
serde_yaml.workspace = true
